# watari-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  evals.yml
docs/: TODO.md  architecture.md  evals.md  threat-model.md
docs/adr/: 000-provider-abstraction.md  001-vector-store.md  002-no-shell-tool.md  003-reasoning-off-by-default.md  004-simple-memory.md
docs/demo/: watari.tape
evals/: CORPUS.md  thresholds.json
evals/baselines/: agent.json  injection.json  memory.json  qwen3.5-4b.json
evals/corpora/: notes.md  profile.md  projects.md
evals/datasets/: agent_v1.jsonl  injection_v1.jsonl  judge_calibration_v1.jsonl  memory_v1.jsonl  rag_qa_v1.jsonl  retrieval_v1.jsonl
src/watari/: __init__.py  cli.py  config.py
src/watari/agent/: loop.py  models.py  permissions.py  registry.py  service.py
src/watari/agent/tools/: files.py  tasks.py  web_search.py
src/watari/api/: app.py  deps.py
src/watari/api/routes/: chat.py  health.py  metrics.py
src/watari/core/: chat.py  context.py  llm.py  models.py  schema.sql  session.py  tokens.py
src/watari/core/prompts/: system.md
src/watari/evals/: agent_eval.py  calibrate.py  cli.py  gate.py  harness.py  injection.py  memory_eval.py  models.py  report.py  runner.py
src/watari/evals/metrics/: calibration.py  judge.py  retrieval.py
src/watari/memory/: cli.py  extract.py  models.py  service.py  store.py
src/watari/obs/: logging.py  metrics.py  tracing.py
src/watari/rag/: chunking.py  cite.py  embeddings.py  ingest.py  models.py  retrieve.py  schema.sql  service.py  store.py
src/watari/security/: sandbox.py  validation.py
tests/: conftest.py
tests/security/: test_file_tools.py  test_sandbox.py  test_validation.py
tests/unit/: test_agent.py  test_api.py  test_chat_service.py  test_chunking.py  test_cite.py  test_config.py  test_context.py  test_eval_gate.py  test_eval_judge.py  test_eval_metrics.py  test_injection_detection.py  test_memory.py  test_observability.py  test_rag_store.py  test_rrf.py  test_session.py
