[project]
name = "watari"
version = "0.1.0"
description = "A local-first LLM personal assistant with rigorous evals, security, and observability."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Rishabh Shah" }]
keywords = ["llm", "rag", "agent", "local-first", "ollama", "evals"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "openai>=1.55",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "aiosqlite>=0.20",
    "structlog>=24.4",
    "typer>=0.13",
    "rich>=13.9",
    "httpx>=0.27",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pyright>=1.1.390",
    "pre-commit>=4.0",
]

[project.scripts]
watari = "watari.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watari"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ASYNC",# flake8-async
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
# Prompt strings intentionally use typographic "›" glyphs in the CLI UI.
"src/watari/cli.py" = ["RUF001"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["."]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

# Application code is checked strictly. Tests exercise private internals and use
# dynamically-typed third-party test clients, where strict mode is noise, not
# signal — so tests get a basic-mode execution environment.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingParameterType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: requires a live model server (deselected by default)",
]

[tool.coverage.run]
source = ["src/watari"]
branch = true
